--- a/conf.template
+++ b/conf.template
@@ -1,4 +1,9 @@
 server {
+  listen 80;
+  return 301 https://$host$request_uri;
+}
+
+server {
   listen 443;
   ssl on;
   ssl_certificate /etc/nginx/conf.d/cert.pem;
